# ehds-api-demo

./: .env.example  .gitignore  CLAUDE.md  HANDOFF.md  README.md  download_igs.sh  fetch_validator.sh  pyproject.toml  run.sh
.claude/: launch.json  serve.sh
.claude/commands/: ehds-add-document-category.md  ehds-deploy-and-verify.md  ehds-explain-401.md  ehds-register-and-mint.md  ehds-reseed-safe.md  ehds-trace-submission.md
.github/workflows/: ci.yml
app/: __init__.py  config.py  main.py  security.py
app/auth/: jwks.py  smart.py  verify.py
app/fhir/: capability.py  document.py  ids.py  naturalize.py  store.py  validate.py
app/routers/: binary.py  bundle.py  discovery.py  docref.py  docsubmit.py  epic_import.py  everything.py  metadata.py  patient.py  resource.py  source_link.py  ui.py
app/sources/: __init__.py  epic_client.py  epic_ingest.py  epic_transform.py
app/tools/: register_client.py
config/: clients.json
data/: clients.json
data/allergy-intolerances/: 017de282-3d03-501e-b57e-9696e8075ef0.json  0d9efc59-c806-57ee-9d5e-5f34dee0f7c2.json  11fe4176-a041-5692-94ed-8b735d998e61.json  1d3b9867-48b7-5529-96bf-a9a6e4432de3.json  2338c91b-bf42-54b2-874c-da6dce04b07c.json  24f9329f-d7c3-518d-a560-e47035b4d8fe.json  265e82d6-da01-5071-a6d6-e86e6956cb57.json  2ad4a253-c4ab-5cc0-b344-c7a57d15c8af.json  2dd7c010-f0d5-59f2-ab9f-028b02e25b9d.json  37487234-842b-5c51-a162-90d250bc2841.json  38a9dad4-27c6-52d3-98c8-dc754ba729c7.json  42823769-b3d0-532c-b84f-f956f44c87f4.json  46659cd9-d778-5e8c-813a-034caac77f03.json  4e47446d-5e00-5391-8705-7454d55cb961.json  55b480c9-01d0-5996-89ec-2e3b786cf812.json  5640dcf8-86b0-5787-b48d-dbf937691e48.json  62bf6239-57d2-50d4-a550-700de6c3f740.json  645a3fec-6b8e-5034-91f9-5362fa071d82.json  677833a0-81fd-5361-b7c8-83d9894930a1.json  74352e64-c860-51bc-9b6f-02c06d5f9ae7.json  7a2d449a-cdf8-5dc9-9820-8a39c15b3ac8.json  8421ad16-c474-5bcd-aab1-b7f669cf08f7.json  8d87cf93-2f15-5db4-9b43-1c56af82259a.json  allergy-p-001-00.json  allergy-p-001-01 2.json  allergy-p-001-02 2.json  allergy-p-002-00 2.json  allergy-p-002-01 2.json  allergy-p-002-02 2.json  allergy-p-003-00 2.json  allergy-p-003-01.json  allergy-p-003-02 2.json  allergy-p-004-00 2.json  allergy-p-004-01.json  allergy-p-004-02 2.json  allergy-p-005-00.json  allergy-p-005-01.json  allergy-p-005-02.json  allergy-p-006-00.json  allergy-p-006-01.json  (+23 more)
data/compositions/: 09e99b01-bddd-4a53-bc93-2e387ac77f25.json  2218b186-5f94-4a75-9b57-55d52c3f2ba6.json  26ea8b90-d140-488e-8930-4b89bf6706e4.json  3784d277-b60a-47e2-be52-1963fe4422f1.json  42c13264-4dd4-4b2b-bc51-c8e38afa647a.json  4d5155a3-a12b-4e95-a98b-42caa6b3b9b0.json  (+14 more)
deploy/: Caddyfile.example  Dockerfile  README.md  cpu-watchdog.sh  docker-compose.yml  ehds-api.service  ehds-cpu-watchdog.service  ehds-cpu-watchdog.timer  first-deploy.sh
docs/: TROUBLESHOOTING.md  audit-recipes.md  conformance-deviations.md  document-search-chaining.md  epic-eu-bundling.md  identity-cheatsheet.md  resource-identity.md  runbook.md
scripts/: ingest_epic.py  seed.py  submit_bundle.py
static/: index.html  main.js  styles.css
tests/: conftest.py  test_actor_document_access_provider.py  test_actor_document_publisher.py  test_actor_grouped.py  test_actor_resource_consumer.py  test_auth_smart.py  test_capability.py  test_conformance_extras.py  test_docref_and_binary.py  test_epic_ingest_pipeline.py  test_epic_transform.py  test_everything.py  test_healthz.py  test_ig_coverage.py  test_iti67_mhd_search.py  test_naturalize.py  test_patient_pdqm.py  test_profile_validation.py  test_register_client_cli.py  test_resource_router.py  test_security.py  test_store_cache.py  test_structural_validation.py  test_submission_iti105.py  test_valuesets.py
(+1255 files in other folders)
