[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ehds-api"
version = "0.1.0"
description = "Minimum-viable FHIR R4 server implementing the EU Health Data API (EHDS) IG"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "ehds-api contributors" }]
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "gunicorn>=23",
    "fhir.resources>=8.0",
    "pydantic>=2.7",
    "PyJWT[crypto]>=2.9",
    "cryptography>=43",
    "python-multipart>=0.0.12",
    "slowapi>=0.1.9",
    "python-json-logger>=2.0",
    "PyYAML>=6.0",
    "qrcode>=7.4",  # SVG QR codes for the /ui#/qr page
    "httpx>=0.27",  # outbound HTTP for app.sources.* (Epic, future Cerner, ...)
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5",
    "httpx>=0.27",
    "ruff>=0.7",
]

[tool.setuptools.packages.find]
include = ["app*"]
exclude = ["tests*", "scripts*", "data*", "ig*", "deploy*", "config*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
filterwarnings = ["ignore::DeprecationWarning"]

[tool.ruff]
line-length = 110
target-version = "py311"
[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "S"]
# S* warnings the project intentionally accepts:
#  S110  try/except/pass — used for best-effort fs writes (audit log etc.)
#  S310  urllib URL open — used in the register-client CLI against the
#         user-supplied --base-url, with HTTPS expected.
#  S603/S607  subprocess for the HL7 java validator and `git rev-parse`,
#         both bounded to known binaries.
#  B008  fastapi `Body(...)` in defaults — fastapi-idiomatic.
ignore = ["E501", "S101", "S110", "S310", "S603", "S607", "B008"]
[tool.ruff.lint.per-file-ignores]
# tests have intentional late imports (after early env-setup at conftest top)
# and embed test bearer / kid strings.
"tests/**" = ["S105", "S106", "E402", "B904"]
# routers/auth do a lot of `raise HTTPException(...)` after caught exceptions
# where chaining the original via `from e` would leak internal details; we
# explicitly elide the chain.
"app/auth/**" = ["B904"]
"app/routers/**" = ["B904"]
"app/security.py" = ["B904"]
"app/tools/register_client.py" = ["B904"]
"app/fhir/validate.py" = ["B904"]
